<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KillerApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Killer App</string>
    <string name="attack_button">Attack!</string>

    <integer-array name="cooldown_main">
        <item>15</item>
        <item>30</item>
    </integer-array>

    <string name="username">Display Name</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="menu">Settings</string>
    <string name="toggle_nfc">Toggle NFC</string>
    <string name="killed_by">Killed By</string>
    <string name="no_records_found">No Records Found</string>
    <string name="title_activity_display_interactions">DisplayInteractions</string>
    <string name="defend_button">Defend!</string>
    <string name="view_interaction_history">View Stats</string>
    <string name="Stats">Stats</string>
    <string name="title_activity_nfc_handle">NfcHandle</string>
    <string name="nfc">NFC</string>
    <string name="activity_name_main_activity">MainActivity</string>
    <string name="time">Time</string>

</resources>
