<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetInfo" >

    <Button
        android:id="@+id/save_player_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:layout_marginRight="82dp"
        android:onClick="saveButtonClick"
        android:text="@string/save" />

    <Button
        android:id="@+id/reset_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        android:layout_marginLeft="250dp"
        android:onClick="resetButtonClick"
        android:text="@string/reset" />
    
    <EditText
        android:id="@+id/display_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/nfc_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/display_name_edittext"
        android:layout_below="@+id/display_name_edittext"
        android:layout_marginTop="33dp"
        android:text="@string/toggle_nfc" />

</RelativeLayout>