<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/attack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:minHeight="96dp"
        android:minWidth="256dp"
        android:onClick="onClickAttackButton"
        android:text="@string/attack_button"
        android:textSize="46sp" />

    <Button
        android:id="@+id/menu_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClickMenuButton"
        android:text="@string/menu" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attack_button"
        android:layout_alignLeft="@+id/attack_button"
        android:layout_alignRight="@+id/attack_button"
        android:minHeight="96dp"
        android:minWidth="256dp"
        android:text="@string/defend_button"
        android:textSize="46sp" />

</RelativeLayout>
